--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -1,8 +1,9 @@
 .footer{
     width: 100%;
-    height: 100px;
-    background: silver;
+    height:70px;
+    background:blue;
     display: flex;
     justify-content: center;
     align-items: center;
+    color: white;
 }
