--- a/src/components/headerMenu/headerMenu.module.css
+++ b/src/components/headerMenu/headerMenu.module.css
@@ -1,7 +1,7 @@
 .navigate{
     width: 400px;
-    height: 90px;
-    background: gray;
+    height: 70px;
+    background: forestgreen;
     position: relative;
     display: flex;
     justify-content: center;
@@ -17,10 +17,12 @@
 .navigate ul li{
     position: relative;
     list-style: none;
-    width: 60px;
-    height: 60px;
+    width: 70px;
+    height: 70px;
+    z-index: 1;
     cursor: pointer;
 }
+
 .navigate ul li a{
     position: relative;
     display: flex;
@@ -31,26 +33,48 @@
     text-align: center;
     font-weight: 500;
 }
+
 .navigate ul li a .icon{
     position: relative;
     display: block;
     line-height: 70px;
     font-size: 1.5em;
     text-align: center;
-    color: black;
+    transition: 0.5s;
+}
+
+.navigate ul li.active a .icon{
+    transform: translateY(-35px);
+}
+
+.navigate ul li a .text{
+    position: absolute;
+    font-weight: 400;
+    font-size: 0.75em;
+    letter-spacing: 0.05em;
+    transition: 0.5s;
+    opacity: 0;
+    transform: translateY(20px);
+}
+
+.navigate ul li.active a .text{
+    opacity: 1;
+    transform: translateY(1em);
 }
 
 .indicator{
     box-sizing: border-box;
     position: absolute;
     top: -50%;
-    border: 6px solid hotpink;
+    border: 6px solid darkkhaki;
     width: 70px;
     height: 70px;
-    background: lightgreen;
+    background: ivory;
     border-radius: 50%;
+    transition: 0.5s;
 }
-.indicator:before{
+
+.indicator::before{
     content: '';
     position: absolute;
     top: 50%;
@@ -58,29 +82,79 @@
     width: 20px;
     height: 20px;
     border-top-right-radius: 20px;
-    box-shadow: 1px -10px 0 0 yellow;
+    box-shadow: 1px -10px 0 0 firebrick;
 }
 
-.indicator:after{
+.indicator::after{
     content: '';
     position: absolute;
     top: 50%;
-    left: -22px;
+    right: -22px;
     width: 20px;
     height: 20px;
+    background: transparent;
     border-top-left-radius: 20px;
-    box-shadow: -1px -10px 0 0 yellow;
+    box-shadow: -1px -10px 0 0 mintcream;
 }
-/*
+
 .navigate ul li:nth-child(1).active ~ .indicator{
-    transform: translateY(calc(70px * 0 ));
+    transform: translateY(calc(70px * 0));
 }
 .navigate ul li:nth-child(2).active ~ .indicator{
-    transform: translateX(calc(70px * 1 ));
+    transform: translateX(calc(70px * 1));
 }
 .navigate ul li:nth-child(3).active ~ .indicator{
-    transform: translateX(calc(70px * 2 ));
+    transform: translateX(calc(70px * 2));
 }
 .navigate ul li:nth-child(4).active ~ .indicator{
-    transform: translateX(calc(70px * 3 ));
+    transform: translateX(calc(70px * 3));
+}
+
+.switchBtn{
+    width: 50px;
+    height: 25px;
+    border-radius: 20px;
+    outline: none;
+    border: none;
+    overflow: hidden;
+    position: relative;
+    cursor: pointer;
+}
+
+.btnTogleDark{
+    box-sizing: border-box;
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    transform: translateX(0px);
+    transition: 0.3s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border:2px solid dodgerblue;
+}
+
+.btnTogleLight{
+    box-sizing: border-box;
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    transform: translateX(26px);
+    transition: 0.3s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border:2px solid indigo;
+}
+
+@media (max-width: 1000px){
+    .navigate{
+        width: 300px;
+    }
 }
