--- a/src/components/movieCard/movieCard.module.css
+++ b/src/components/movieCard/movieCard.module.css
@@ -1,23 +1,24 @@
 .card{
     box-sizing: border-box;
     width: 16%;
-    height: 350px;
+    height: 315px;
     position: relative;
     min-height: 250px;
     overflow: hidden;
-    background: gray;
-    border-radius: 25px;
+    background: grey;
+    border-radius: 20px;
     transform: scale(100%);
-
-.card p{
-    line-height: 10%;
-    vertical-align: center;
+    transition: 0.3s;
 }
 
-.img{
+.img {
     width: 100%;
-    height: 90%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    z-index: 0;
     display: block;
+
 }
 
 .infoDiv{
@@ -28,18 +29,62 @@
 }
 
 .movieInfo{
+    box-sizing: border-box;
+    padding: 20px;
     width: 100%;
     height: 10%;
-    background: blueviolet;
+    background: var(--transparent-color);
     z-index: 10;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
+    justify-content: space-between;
+    text-align: start;
+    align-items: start;
     color: white;
+    transition: 0.3s;
+
+}
+.movieInfo div{
+    padding-bottom: 10px;
+}
+.title{
+    font-size: 20px;
+    font-weight: 400;
+    color: white;
+    display: block;
 }
 
-.movieInfo:hover{
+.descript{
+    font-size: 14px;
+    font-style: italic;
+    color: var(--text-color);
+    width: 50%;
+
+}
+.genres{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 110%;
+}
+
+
+.rating{
+    box-sizing: border-box;
+    vertical-align: center;
+    border-radius: 10px;
+    padding: 5px 5px 0;
+    height: 30px;
+    background: white;
+
+}
+
+.card:hover{
+    transform: scale(110%);
+    cursor: pointer;
+}
+.card:hover .movieInfo{
     cursor: pointer;
     position: absolute;
     width: 101%;
@@ -47,13 +92,14 @@
     transform: translateY(-316px);
 }
 
-.rating{
-    display: flex;
-    justify-content: start;
-    gap: 10px;
+@media (max-width: 1200px){
+    .card{
+        width: 20%;
+    }
 }
 
-.cord:hover{
-    transform: scale(100%);
-    cursor: pointer;
+@media (max-width: 1000px){
+    .card{
+        width: 27%;
+    }
 }
