--- a/src/components/movies/movies.module.css
+++ b/src/components/movies/movies.module.css
@@ -1,19 +1,39 @@
 .wrap{
+    min-height: 55%;
     padding: 50px;
-    background: mediumvioletred;
+    background: var(--background-color);
     display: flex;
     justify-content: space-between;
     flex-direction: column;
     align-items: center;
+
 }
 
-.MoviesDiv{
+
+
+
+.moviesDiv{
     box-sizing: border-box;
     width: 100%;
+    margin: 50px auto;
     padding: 40px;
     display: flex;
     flex-wrap: wrap;
     text-align: center;
     gap: 50px;
+
+}
+
+.paginationDiv{
+    background: rgba(255,250,250,0.3);
+    border-radius: 10px;
+    padding: 5px;
+}
+
+.error{
+    font-size: 40px;
+    color: red;
+    font-weight: 600;
+    padding: 50px;
     margin-top: 50px;
 }
