--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,47 @@
+html{
+  height: 100%;
+}
 body {
+  background: var(--background-color);
+  height: 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  monospace;
+}
+
+#root{
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+
+/*dark theme*/
+
+html[dataTheme='dark']{
+  --background-color: #23242a;
+  --minor-backround-color:#1a1b1f;
+  --maine-color: orangered;
+  --minor-color: grey;
+  --text-color: rgba(255,255,255,0.7);
+  --transparent-color: rgba(35,36,42,0.8);
+  --maine-text-color: snow;
+}
+
+html[dataTheme='light']{
+  --background-color: azure;
+  --minor-backround-color: #a3eeee;
+  --maine-color: teal;
+  --minor-color: teal;
+  --text-color: rgba(255,255,255,0.7);
+  --transparent-color: rgba(35,36,42,0.8);
+  --maine-text-color: black;
 }
